@@ -1,6 +1,7 @@
 Revision history for experimental
 
 {{$NEXT}}
+          - Add the declared_refs feature
 
 0.019     2017-12-03 18:40:19+01:00 Europe/Amsterdam
           - Rerelease without NYTProf files
